# job-applicant-agent

./: .gitignore  README.md  pyproject.toml
output/: applications.db
src/job_applicant/: app.py  main.py  models.py  state.py
src/job_applicant/config/: agents.yaml  application_agents.yaml  application_tasks.yaml  research_agents.yaml  research_tasks.yaml  tasks.yaml
src/job_applicant/crews/: application_crew.py  research_crew.py
src/job_applicant/tools/: file_writer_tool.py  job_apply_tool.py  job_search_tool.py  resume_parser_tool.py
